--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -91,6 +91,7 @@ dependencies = [
   "anthropic>=0.69.0",
   "novu-py>=3.11.0",
   "psutil>=5.9.0",
+  "google-analytics-data>=0.18.0",
 ]
 
 [project.urls]
