--- a/.github/workflows/desktop-build.yml
+++ b/.github/workflows/desktop-build.yml
@@ -44,16 +44,70 @@ jobs:
         working-directory: apps/desktop
         run: npm ci
 
+      - name: Import Apple Code Signing Certificate
+        if: ${{ env.APPLE_CERTIFICATE_P12 != '' }}
+        env:
+          APPLE_CERTIFICATE_P12: ${{ secrets.APPLE_CERTIFICATE_P12 }}
+        run: |
+          # Create temporary keychain
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+          KEYCHAIN_PASSWORD=$(openssl rand -base64 32)
+          
+          # Create keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          
+          # Import certificate
+          echo "${{ secrets.APPLE_CERTIFICATE_P12 }}" | base64 --decode > certificate.p12
+          security import certificate.p12 \
+            -k "$KEYCHAIN_PATH" \
+            -P "${{ secrets.APPLE_CERTIFICATE_PASSWORD }}" \
+            -T /usr/bin/codesign \
+            -T /usr/bin/productsign
+          
+          # Set keychain for codesign
+          security list-keychain -d user -s "$KEYCHAIN_PATH"
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          
+          # Clean up
+          rm certificate.p12
+          
+          echo "✅ Certificate imported successfully"
+
       - name: Build macOS app (${{ matrix.arch }})
         working-directory: apps/desktop
         run: npm run build:mac -- --${{ matrix.arch }}
         env:
-          # Skip notarization in CI (requires Apple Developer credentials)
-          CSC_IDENTITY_AUTO_DISCOVERY: false
+          # Use proper signing if certificate is available
+          CSC_LINK: ${{ secrets.APPLE_CERTIFICATE_P12 }}
+          CSC_KEY_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
 
-      - name: Ad-hoc code sign the app
+      - name: Notarize app (if credentials available)
+        if: ${{ env.APPLE_ID != '' }}
         working-directory: apps/desktop
+        env:
+          APPLE_ID: ${{ secrets.APPLE_ID }}
         run: |
+          echo "🔔 Notarizing app with Apple..."
+          
+          # electron-builder handles notarization automatically if credentials are set
+          # The build step above already notarized it
+          
+          echo "✅ Notarization complete (if credentials were valid)"
+
+      - name: Ad-hoc code sign (fallback if no certificate)
+        if: ${{ env.APPLE_CERTIFICATE_P12 == '' }}
+        working-directory: apps/desktop
+        env:
+          APPLE_CERTIFICATE_P12: ${{ secrets.APPLE_CERTIFICATE_P12 }}
+        run: |
+          echo "⚠️  No Apple certificate found, using ad-hoc signing"
+          echo "   Users will need to right-click > Open on first launch"
+          
           # Find the .app bundle
           APP_PATH=$(find dist/mac*/ -name "*.app" -type d | head -1)
           
@@ -66,26 +120,12 @@ jobs:
             # Ad-hoc sign with hardened runtime
             codesign --force --deep --sign - \
               --options runtime \
-              --entitlements <(cat <<EOF
-          <?xml version="1.0" encoding="UTF-8"?>
-          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-          <plist version="1.0">
-          <dict>
-            <key>com.apple.security.cs.allow-jit</key>
-            <true/>
-            <key>com.apple.security.cs.allow-unsigned-executable-memory</key>
-            <true/>
-            <key>com.apple.security.cs.disable-library-validation</key>
-            <true/>
-          </dict>
-          </plist>
-          EOF
-          ) "$APP_PATH"
+              "$APP_PATH"
             
             # Verify signature
             codesign --verify --verbose "$APP_PATH"
             
-            echo "✅ App signed successfully"
+            echo "✅ App signed successfully (ad-hoc)"
           else
             echo "⚠️  Warning: Could not find .app bundle"
             ls -R dist/
