--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^5.2.1",
     "@icons-pack/react-simple-icons": "^13.7.0",
+    "@liquidglass/react": "^0.1.3",
     "@next/third-parties": "^15.3.1",
     "@novu/nextjs": "^3.11.0",
     "@novu/notification-center": "^2.0.0",
@@ -82,6 +83,7 @@
     "@tiptap/extension-task-item": "^3.3.0",
     "@tiptap/extension-task-list": "^3.3.0",
     "@tiptap/extension-text-align": "^3.3.0",
+    "@tiptap/extension-text-style": "^3.13.0",
     "@tiptap/extension-typography": "^3.3.0",
     "@tiptap/extension-youtube": "^3.3.0",
     "@tiptap/pm": "^3.3.0",
@@ -127,6 +129,7 @@
     "jszip": "^3.10.1",
     "katex": "^0.16.22",
     "libphonenumber-js": "^1.12.10",
+    "liquid-glass-react": "^1.1.1",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
     "lowlight": "^3.3.0",
