fix: example prompts not loading into chatinput

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -155,6 +155,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-is": "^19.2.3",
     "react-markdown": "^10.1.0",
     "react-papaparse": "^4.4.0",
     "react-pdf": "^9.2.1",
