--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -17,6 +17,7 @@
       }
     },
     "production": {
+      "channel": "production",
       "ios": {
         "simulator": false,
         "autoIncrement": true
@@ -34,6 +35,7 @@
       }
     },
     "testflight": {
+      "channel": "main",
       "environment": "preview",
       "ios": {
         "simulator": false,
