--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -117,7 +117,9 @@
     "owner": "kortix",
     "runtimeVersion": "1.1.0",
     "updates": {
-      "url": "https://u.expo.dev/9fca3cff-a291-41c9-88b9-feb8053b990f"
+      "url": "https://u.expo.dev/9fca3cff-a291-41c9-88b9-feb8053b990f",
+      "checkAutomatically": "ON_ERROR_RECOVERY",
+      "fallbackToCacheTimeout": 0
     }
   }
 }
