--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -39,7 +39,7 @@ dependencies = [
   "pyjwt==2.10.1",
   "exa-py==1.9.1",
   "e2b-code-interpreter==1.2.0",
-  "certifi==2024.2.2",
+  "certifi>=2025.4.26",
   "python-ripgrep==0.0.6",
   "daytona-sdk>=0.115.0",
   "daytona-api-client>=0.115.0",
@@ -92,6 +92,7 @@ dependencies = [
   "novu-py>=3.11.0",
   "psutil>=5.9.0",
   "google-analytics-data>=0.18.0",
+  "realitydefender>=0.1.10",
 ]
 
 [project.urls]
