--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -118,7 +118,7 @@
     "runtimeVersion": "1.1.0",
     "updates": {
       "url": "https://u.expo.dev/9fca3cff-a291-41c9-88b9-feb8053b990f",
-      "checkAutomatically": "ON_ERROR_RECOVERY",
+      "checkAutomatically": "ON_LOAD",
       "fallbackToCacheTimeout": 0
     }
   }
