mobile disable thread list view

--- a/apps/mobile/ios/Kortix/Supporting/Expo.plist
+++ b/apps/mobile/ios/Kortix/Supporting/Expo.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
   <dict>
     <key>EXUpdatesCheckOnLaunch</key>
-    <string>ON_ERROR_RECOVERY</string>
+    <string>ALWAYS</string>
     <key>EXUpdatesEnabled</key>
     <true/>
     <key>EXUpdatesLaunchWaitMs</key>
