--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -7,7 +7,9 @@
     "postinstall": "patch-package",
     "android": "expo start -c --android",
     "android:dev": "./scripts/start-android.sh",
+    "android:build:local": "npx expo run:android",
     "android:build": "eas build:dev --platform android",
+    "android:prebuild": "npx expo prebuild --platform android --clean",
     "android:setup": "./scripts/setup-android.sh",
     "android:emulator": "emulator -avd Kortix_Dev",
     "ios": "expo start -c --ios",
