--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - PRODUCTION
+      - '**'  # All branches for preview deployments
   workflow_dispatch:
   repository_dispatch:
     types: [production-updated]
@@ -27,21 +28,28 @@ jobs:
         run: |
           echo "Event name: ${{ github.event_name }}"
           echo "Current ref: ${{ github.ref }}"
-          echo "Branch: ${GITHUB_REF#refs/heads/}"
+          BRANCH_NAME="${GITHUB_REF#refs/heads/}"
+          echo "Branch: $BRANCH_NAME"
           
           if [[ "${{ github.event_name }}" == "repository_dispatch" ]]; then
             echo "Triggered by repository dispatch - setting prod environment"
             echo "branch=prod" >> $GITHUB_OUTPUT
             echo "environment=prod" >> $GITHUB_OUTPUT
-          elif [[ "${GITHUB_REF#refs/heads/}" == "main" ]]; then
+            echo "is_preview=false" >> $GITHUB_OUTPUT
+          elif [[ "$BRANCH_NAME" == "main" ]]; then
             echo "branch=latest" >> $GITHUB_OUTPUT
             echo "environment=staging" >> $GITHUB_OUTPUT
-          elif [[ "${GITHUB_REF#refs/heads/}" == "PRODUCTION" ]]; then
+            echo "is_preview=false" >> $GITHUB_OUTPUT
+          elif [[ "$BRANCH_NAME" == "PRODUCTION" ]]; then
             echo "branch=prod" >> $GITHUB_OUTPUT
             echo "environment=prod" >> $GITHUB_OUTPUT
+            echo "is_preview=false" >> $GITHUB_OUTPUT
           else
-            echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
-            echo "environment=staging" >> $GITHUB_OUTPUT
+            # Preview deployment for non-main/PRODUCTION branches
+            echo "branch=$BRANCH_NAME" >> $GITHUB_OUTPUT
+            echo "environment=preview" >> $GITHUB_OUTPUT
+            echo "is_preview=true" >> $GITHUB_OUTPUT
+            echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
           fi
           echo "aws_region=us-west-2" >> $GITHUB_OUTPUT
         id: get_tag_name
@@ -100,6 +108,38 @@ jobs:
             echo "=== Deployment complete ==="
             docker compose ps
             df -h / | tail -1
+      - name: Deploy preview
+        if: steps.get_tag_name.outputs.is_preview == 'true'
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.AWS_STAGING_HOST }}
+          username: ${{ secrets.AWS_STAGING_USERNAME }}
+          key: ${{ secrets.AWS_STAGING_KEY }}
+          script: |
+            BRANCH_NAME="${{ steps.get_tag_name.outputs.branch_name }}"
+            IMAGE_TAG="${{ steps.get_tag_name.outputs.branch }}"
+            
+            echo "=== Deploying preview for branch: $BRANCH_NAME ==="
+            
+            # Ensure scripts directory exists and has latest scripts
+            mkdir -p /home/ubuntu/scripts
+            cd /home/ubuntu
+            
+            # Pull latest scripts from repo if they exist
+            if [ -d /home/ubuntu/suna/infra/staging/scripts ]; then
+              cp -r /home/ubuntu/suna/infra/staging/scripts/* /home/ubuntu/scripts/ || true
+              chmod +x /home/ubuntu/scripts/*.sh || true
+            fi
+            
+            # Run deployment script
+            /home/ubuntu/scripts/deploy-preview.sh "$BRANCH_NAME" "$IMAGE_TAG" || {
+              echo "Preview deployment failed"
+              exit 1
+            }
+            
+            echo "=== Preview deployment complete ==="
+            echo "Preview URL: https://$(echo "$BRANCH_NAME" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9-]/-/g' | sed 's/--*/-/g' | sed 's/^-\|-$//g').api-staging.suna.so/v1"
+
 
       # - name: Deploy to staging [legacy]
       #   if: steps.get_tag_name.outputs.environment == 'staging'
