--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -112,39 +112,8 @@ jobs:
             docker compose ps
             df -h / | tail -1
       # Temporarily disabled preview deployments
-      # - name: Deploy preview
-      #   if: steps.get_tag_name.outputs.is_preview == 'true'
-      #   uses: appleboy/ssh-action@v1
-#         with:
-#           host: ${{ secrets.AWS_STAGING_HOST }}
-#           username: ${{ secrets.AWS_STAGING_USERNAME }}
-#           key: ${{ secrets.AWS_STAGING_KEY }}
-#           script: |
-#             BRANCH_NAME="${{ steps.get_tag_name.outputs.branch_name }}"
-#             IMAGE_TAG="${{ steps.get_tag_name.outputs.branch }}"
-            
-#             echo "=== Deploying preview for branch: $BRANCH_NAME ==="
-            
-            # Ensure scripts directory exists and has latest scripts
-#             mkdir -p /home/ubuntu/scripts
-#             cd /home/ubuntu
-            
-            # Pull latest scripts from repo if they exist
-#             if [ -d /home/ubuntu/suna/infra/staging/scripts ]; then
-#               cp -r /home/ubuntu/suna/infra/staging/scripts/* /home/ubuntu/scripts/ || true
-#               chmod +x /home/ubuntu/scripts/*.sh || true
-#             fi
-            
-            # Run deployment script
-#             /home/ubuntu/scripts/deploy-preview.sh "$BRANCH_NAME" "$IMAGE_TAG" || {
-#               echo "Preview deployment failed"
-#               exit 1
-#             }
-            
-#             echo "=== Preview deployment complete ==="
-#             echo "Preview URL: https://$(echo "$BRANCH_NAME" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9-]/-/g' | sed 's/--*/-/g' | sed 's/^-\|-$//g').api-staging.suna.so/v1"
-
-
+      # Temporarily disabled preview deployments
+      # Temporarily disabled: Preview deployments
       # - name: Deploy to staging [legacy]
       #   if: steps.get_tag_name.outputs.environment == 'staging'
       #   uses: appleboy/ssh-action@v1
