--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -93,6 +93,7 @@ dependencies = [
   "psutil>=5.9.0",
   "google-analytics-data>=0.18.0",
   "realitydefender>=0.1.10",
+  "paramiko>=3.4.0",
 ]
 
 [project.urls]
