--- a/frontend/package.json
+++ b/frontend/package.json
@@ -101,6 +101,9 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/edge-config": "^1.4.0",
     "@vercel/speed-insights": "^1.2.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-web-links": "^0.11.0",
+    "@xterm/xterm": "^5.5.0",
     "autoprefixer": "10.4.17",
     "canvas": "^3.1.0",
     "canvas-confetti": "^1.9.4",
