--- a/.github/workflows/e2e-benchmark.yml
+++ b/.github/workflows/e2e-benchmark.yml
@@ -37,27 +37,38 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Set Environment URL
-        id: set-url
-        run: |
-          if [ "${{ inputs.environment }}" = "production" ]; then
-            echo "API_URL=${{ secrets.PRODUCTION_API_URL }}" >> $GITHUB_OUTPUT
-          else
-            echo "API_URL=${{ secrets.STAGING_API_URL }}" >> $GITHUB_OUTPUT
-          fi
-      
       - name: Run E2E Benchmark
         env:
-          API_URL: ${{ steps.set-url.outputs.API_URL }}
+          API_URL: ${{ inputs.environment == 'production' && 'https://api.kortix.com' || 'https://staging-api.suna.so' }}
           ADMIN_API_KEY: ${{ secrets.KORTIX_ADMIN_API_KEY }}
         run: |
           set -e
           
+          # Validate admin API key is configured
+          if [ -z "$ADMIN_API_KEY" ]; then
+            echo "❌ Error: KORTIX_ADMIN_API_KEY is not set"
+            echo "Please add it at: https://github.com/${{ github.repository }}/settings/secrets/actions"
+            exit 1
+          fi
+          
           # Mask secrets
-          echo "::add-mask::$API_URL"
           echo "::add-mask::$ADMIN_API_KEY"
           
           echo "🧪 Starting ${{ inputs.mode }} on ${{ inputs.environment }}"
+          echo "📍 API URL: $API_URL"
+          echo ""
+          
+          # Test API connectivity
+          echo "🔍 Testing API connectivity..."
+          HEALTH_CHECK=$(curl -s -w "\n%{http_code}" "$API_URL/v1/health" 2>&1 || echo -e "\nERROR")
+          HEALTH_STATUS=$(echo "$HEALTH_CHECK" | tail -n1)
+          
+          if [ "$HEALTH_STATUS" != "200" ]; then
+            echo "⚠️  Warning: API health check failed (HTTP $HEALTH_STATUS)"
+            echo "The API might be unreachable or down. Continuing anyway..."
+          else
+            echo "✅ API is reachable"
+          fi
           echo ""
           
           # Build prompt_ids array
@@ -99,16 +110,40 @@ jobs:
           echo "$REQUEST_BODY" | jq '.'
           echo ""
           
-          START_RESPONSE=$(curl -sf -X POST "$API_URL/v1/admin/test-harness/run" \
+          # Make API request with detailed error handling
+          HTTP_RESPONSE=$(curl -s -w "\n%{http_code}" -X POST "$API_URL/v1/admin/test-harness/run" \
             -H "X-Admin-Api-Key: $ADMIN_API_KEY" \
             -H "Content-Type: application/json" \
-            -d "$REQUEST_BODY" 2>&1) || {
-            echo "❌ Failed to start test"
-            echo "$START_RESPONSE"
-            exit 1
-          }
+            -d "$REQUEST_BODY" 2>&1)
           
+          # Extract HTTP status code and body
+          HTTP_STATUS=$(echo "$HTTP_RESPONSE" | tail -n1)
+          START_RESPONSE=$(echo "$HTTP_RESPONSE" | sed '$d')
+          
+          if [ "$HTTP_STATUS" -ne 200 ]; then
+            echo "❌ Failed to start test (HTTP $HTTP_STATUS)"
+            echo ""
+            echo "Response body:"
+            echo "$START_RESPONSE" | jq '.' 2>/dev/null || echo "$START_RESPONSE"
+            echo ""
+            echo "🔍 Troubleshooting:"
+            echo "  1. Verify API URL is correct: $API_URL"
+            echo "  2. Check that KORTIX_ADMIN_API_KEY is valid"
+            echo "  3. Ensure the API server is running and accessible"
+            echo "  4. Check API server logs for more details"
+            exit 1
+          fi
+          
+          # Parse response
           RUN_ID=$(echo "$START_RESPONSE" | jq -r '.run_id')
+          
+          if [ -z "$RUN_ID" ] || [ "$RUN_ID" = "null" ]; then
+            echo "❌ Failed to extract run_id from response"
+            echo "Response:"
+            echo "$START_RESPONSE" | jq '.'
+            exit 1
+          fi
+          
           echo "✅ Test started: $RUN_ID"
           echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
           echo ""
@@ -122,11 +157,17 @@ jobs:
             sleep $WAIT_INTERVAL
             ELAPSED=$((ELAPSED + WAIT_INTERVAL))
             
-            RESULT=$(curl -sf "$API_URL/v1/admin/test-harness/runs/$RUN_ID" \
-              -H "X-Admin-Api-Key: $ADMIN_API_KEY" 2>&1) || {
-              echo "⚠️  Failed to fetch status (retry $((ELAPSED/WAIT_INTERVAL)))"
+            # Fetch status with error handling
+            STATUS_HTTP_RESPONSE=$(curl -s -w "\n%{http_code}" "$API_URL/v1/admin/test-harness/runs/$RUN_ID" \
+              -H "X-Admin-Api-Key: $ADMIN_API_KEY" 2>&1)
+            
+            STATUS_HTTP_CODE=$(echo "$STATUS_HTTP_RESPONSE" | tail -n1)
+            RESULT=$(echo "$STATUS_HTTP_RESPONSE" | sed '$d')
+            
+            if [ "$STATUS_HTTP_CODE" -ne 200 ]; then
+              echo "⚠️  Failed to fetch status (HTTP $STATUS_HTTP_CODE) - retry $((ELAPSED/WAIT_INTERVAL))"
               continue
-            }
+            fi
             
             STATUS=$(echo "$RESULT" | jq -r '.status // "unknown"')
             SUCCESS=$(echo "$RESULT" | jq -r '.summary.successful // 0')
