--- a/frontend/package.json
+++ b/frontend/package.json
@@ -132,6 +132,7 @@
     "jsonrepair": "^3.12.0",
     "jszip": "^3.10.1",
     "katex": "^0.16.22",
+    "konva": "^9.3.16",
     "libphonenumber-js": "^1.12.10",
     "liquid-glass-react": "^1.1.1",
     "lodash": "^4.17.21",
@@ -160,6 +161,7 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-is": "^19.2.3",
+    "react-konva": "^18.2.10",
     "react-markdown": "^10.1.0",
     "react-papaparse": "^4.4.0",
     "react-pdf": "^9.2.1",
