--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -84,6 +84,7 @@
     "fuse.js": "^7.1.0",
     "html-entities": "2.5.3",
     "i18next": "^25.6.0",
+    "install": "^0.13.0",
     "kill-port": "^2.0.1",
     "lottie-react-native": "^7.3.4",
     "lucide-react-native": "^0.545.0",
@@ -96,6 +97,7 @@
     "react-native-drawer-layout": "^4.1.13",
     "react-native-email-link": "^1.16.1",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-keyboard-controller": "^1.20.2",
     "react-native-markdown-display": "^7.0.2",
     "react-native-purchases": "^9.6.5",
     "react-native-purchases-ui": "^9.6.5",
@@ -110,7 +112,7 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "^13.16.0",
-    "react-native-worklets": "^0.6.0",
+    "react-native-worklets": "0.6.0",
     "react-syntax-highlighter": "^16.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.14",
@@ -129,6 +131,7 @@
   },
   "private": true,
   "overrides": {
-    "html-entities": "2.5.3"
+    "html-entities": "2.5.3",
+    "react-native-worklets": "0.6.0"
   }
 }
